MOD: Redirect to change password page (Not complete whole flow)

--- a/src/main/resources/templates/Auth/change-pwd.html
+++ b/src/main/resources/templates/Auth/change-pwd.html
@@ -82,7 +82,7 @@
             <div class="content-container FieldName title">
                 <span>Create your new password in the fields below.</span>
             </div>
-            <form action="changePassword.html" method="post">
+            <form action="changePassword" method="post">
                 <div class="flex-container">
                     <div style="flex: 6;">
                         <div class="flex-container box-container">
