--- a/src/main/resources/templates/Auth/login-fail.html
+++ b/src/main/resources/templates/Auth/login-fail.html
@@ -79,7 +79,7 @@
                     <a th:href="@{/AUTH/login-form.html}">
                         <input type="submit" value="Confirm" />
                     </a >
-                    <!--<span th:text="${#messages.msg('umps.useridandpassword.notempty')}"></span>-->
+                    <span th:text="${#messages.msg('umps.useridandpassword.notempty')}"></span>
                 </div>
             </div>
         </div>
