--- a/src/main/resources/templates/Auth/login-form.html
+++ b/src/main/resources/templates/Auth/login-form.html
@@ -97,7 +97,8 @@
                     <b>User ID :</b>
                 </div>
                 <div class="flex-item-2 field-name content-user-id-right">
-                    <input id="loginId" name="user.userId" value="demo001"/>
+                    <!--<input id="loginId" name="user.userId" value=""/>-->
+                    <input id="loginId" name="user.userId" value="SCUSER08"/>
                     <!--SCUSER08-->
                 </div>
             </div>
@@ -106,6 +107,7 @@
                     <b>Password :</b>
                 </div>
                 <div class="flex-item-2 field-name content-password-right">
+                    <!--<input id="password" name="user.password" type="password" value=""/>-->
                     <input id="password" name="user.password" type="password" value="password"/>
                 </div>
             </div>
