MOD: create access control success MOD: access control global success

--- a/src/main/resources/templates/eServices2/AccessControl/access-control-create-success.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-create-success.html
@@ -70,17 +70,59 @@
                             </span>
                     </div>
                     <div class="flex-item-1 nav-title-right">
-                        <span style="width: 100%;">ACM0011</span>
+                        <span style="width: 100%;">ACM0003</span>
                     </div>
                 </div>
                 <div class="content-container " style=" height: 300px;">
-                    <h3>Access Control Detail</h3>
+                    <div class="border-frame global-success-frame " style="padding: 1em;">
+                        <div class="flex-container success-item-container">
+                            <div class="success-item-left">
+                                <span>Type</span>
+                            </div>
+                            <div class="success-item-right">
+                                <span>Whitelist</span>
+                            </div>
+                        </div>
+                        <div class="flex-container success-item-container">
+                            <div class="success-item-left">
+                                <span>Channel</span>
+                            </div>
+                            <div class="success-item-right">
+                                <span>Web</span>
+                            </div>
+                        </div>
+                        <div class="flex-container success-item-container">
+                            <div class="success-item-left">
+                                <span>IP Address/Telephone Number</span>
+                            </div>
+                            <div class="success-item-right">
+                                <span>10.26.181.24</span>
+                            </div>
+                        </div>
+                        <div class="flex-container success-item-container">
+                            <div class="success-item-left">
+                                <span>Effective From</span>
+                            </div>
+                            <div class="success-item-right">
+                                <span>10/02/2010 00:00:00</span>
+                            </div>
+                        </div>
+                        <div class="flex-container success-item-container">
+                            <div class="success-item-left">
+                                <span>Effective To</span>
+                            </div>
+                            <div class="success-item-right">
+                                <span>11/12/2010 00:00:00</span>
+                            </div>
+                        </div>
+                    </div>
 
-                    <h3>success</h3>
+                    <div class="success-label">The item is saved.</div>
 
                     <div style=" float: right; padding-top: 1em;">
-                        <input type="text" value="Save" class="ButtonStyle submit-button" style="margin-right: 20px;" />
-                        <input type="text" value="Cancel" class="ButtonStyle submit-button" />
+                        <a th:href="@{/accessControl.do}">
+                            <input type="text" value="Back to Access Control" class="ButtonStyle back-button" style="margin-right: 20px;" />
+                        </a>
                     </div>
                 </div>
             </div>
