--- a/src/main/webapp/css/access-control.css
+++ b/src/main/webapp/css/access-control.css
@@ -51,3 +51,33 @@
     width: 20px;
     text-align: center;
 }
+
+.global-success-frame {
+    height: auto;
+}
+
+.success-label {
+    padding-top: 1em;
+    color: red;
+}
+
+.back-button {
+    width: 200px;
+    text-align: center;
+}
+
+.success-item-container {
+    padding: 0.5em;
+    /* border: 1px solid red; */
+}
+
+.success-item-left {
+    flex: 4;
+    padding-left: 10%;
+    font-weight: bold;
+}
+
+.success-item-right {
+    flex: 6;
+    padding-left: 1em;
+}
