--- a/src/main/resources/templates/eServices2/application-fee-enquiry.html
+++ b/src/main/resources/templates/eServices2/application-fee-enquiry.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"></meta>
     <title>e-Services Admin Function</title>
@@ -119,17 +119,12 @@
     </div>
     <div class="grid-container ">
         <div class="main-menu">
+            <span th:each="m,i : ${ROOT.childern}">
+                <input type="radio" id="main-tab-" th:attrappend="id=${i.index + 1}"  name="main-tabs" checked="checked"/>
+                <label for="main-tab-" th:attrappend="for=${i.index + 1}" style="" url="${m.url}" th:text="${m.label}"></label>
 
-            <input type="radio" id="main-tab-1" name="main-tabs" checked="checked"/>
-            <label for="main-tab-1" style="margin-left: 30px;">e-Services-2</label>
+            </span>
 
-            <input type="radio" id="main-tab-2" name="main-tabs" />
-            <label for="main-tab-2">SMARTICS-2</label>
-
-
-            <!--<a th:href="@{/applicationFeeEnquiry.html}">-->
-            <input type="radio" id="main-tab-3" name="main-tabs" />
-            <label for="main-tab-3">RM</label>
             <!--</a>-->
             <div style="float: right;">
                 <a th:href="@{/AUTH/logout.do}" class="exit-btn">
